--- a/style.css
+++ b/style.css
@@ -62,11 +62,16 @@ html{
 #left{
     height: 100%;
     background-color:white;
-    width:75%;
+    width:60%;
     margin:10px;
 }
 #right{
     height: 100%;
+    display:flex;
+    flex-direction:column;
+    align-self:flex-start;
+    padding:20px;
+    width:35%;
 }
 #subwhite{
     display:flex;
@@ -75,4 +80,31 @@ html{
 }
 #jellybean{
     float: left;
+}
+#easterflowers{
+    float:left;
+}
+#search{
+    display:flex;
+    flex-direction:column;
+    height:25px;
+    width:350px;
+    font-size:medium;
+    border-color:gray;
+    color:gray;
+    margin:4px;
+}
+#subscribe{
+    display:flex;
+    background-color:rgb(255,199,143);
+    margin:4px;
+    border-color:rgb(255,199,143);
+}
+#socialmedia{
+    display:flex;
+    background-color:rgb(191,220,203);
+    margin:4px;
+}
+input{
+    
 }
